# computer_graphics

./: .gitignore  Cargo.toml  LICENSE  README.md  clear.bat
data/: create_3d_figure.py  render_vertex_from_svg.py
lab_1/: Cargo.toml
lab_1/src/: main.rs  vertex.glsl
lab_2/: Cargo.toml
lab_2/src/: main.rs  vertex.glsl
lab_3/: Cargo.toml
lab_3/src/: fragments.glsl  main.rs
lab_4+5/: Cargo.toml
lab_4/src/: main.rs
lab_5/src/: main.rs
lab_6/: Cargo.toml
lab_7/src/: main.rs
